--- a/css/main.css
+++ b/css/main.css
@@ -742,6 +742,11 @@ img {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  text-align: center;
+}
+
+.footer-address-container {
+  margin-bottom: 60px;
 }
 
 .logo-footer {
@@ -756,17 +761,20 @@ img {
   margin-bottom: 20px;
 }
 
+.footer-social-link {
+  margin-bottom: 60px;
+}
+
 .footer-address {
   font-family: var(--main-font);
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 1.714;
-  text-align: center;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
-  margin-bottom: 8px;
   display: block;
+  margin-bottom: 8px;
 }
 
 .footer-contact-mail,
@@ -781,38 +789,20 @@ img {
   font-weight: 400;
 }
 
-.footer-contact-address:not(:last-child) {
+.footer-contact-mail {
+  display: block;
   margin-bottom: 8px;
 }
 
 .footer-slogan {
   font-family: Roboto;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 14px;
-  line-height: 1.143;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-}
-
-.footer-form {
-  margin-top: 20px;
   margin-bottom: 20px;
-}
-
-.footer-form-input {
-  width: 100%;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: #2f303a;
-  color: rgba(255, 255, 255, 0.6);
-  padding: 15px 16px;
-  max-width: 450px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .footer-social-list {
@@ -823,17 +813,6 @@ img {
 
 .footer-social-list-item:not(:last-child) {
   margin-right: 10px;
-}
-
-.footer-social-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link,
@@ -876,12 +855,61 @@ img {
   margin-right: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .footer > .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-adress-container {
+    margin-right: 174px;
+    margin-left: 76px;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-adress-container {
+    margin-right: 174px;
+    margin-left: 76px;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer > .container {
+    display: flex;
+    align-items: baseline;
+  }
+  .footer {
+    text-align: left;
+  }
+  .footer-adress-container {
+    margin-right: 84px;
+    margin-left: 0;
+    margin-bottom: 0;
+  }
+  .footer-social-link {
+    margin-right: 93px;
+  }
+  .address,
+  .footer-contact-email {
+    margin-bottom: 9px;
+  }
+  .footer-social-link {
+    margin-bottom: 0;
+  }
+  .logo-footer {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+
+/*
 @media screen and (max-width: 1199px) {
   .footer {
     text-align: center;
   }
 }
-
 @media screen and (min-width: 768px) {
   .footer-flex {
     display: flex;
@@ -889,63 +917,53 @@ img {
     align-items: baseline;
   }
 }
-
 @media screen and (max-width: 1199px) {
   .footer-container-slogan {
     margin-bottom: 60px;
   }
 }
-
 @media screen and (max-width: 1199px) and (min-width: 768px) {
   .footer-container-slogan {
     display: inline-block;
   }
 }
-
 @media screen and (max-width: 1199px) {
   .footer-container-slogan {
     margin-bottom: 60px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .footer-container-slogan {
     margin-left: 70px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .footer-social-list {
     justify-content: space-between;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .footer-group {
     margin-left: 93px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .footer-form {
     display: flex;
     margin-top: 20px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .footer-form-input {
     display: flex;
     width: 358px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .button-subscribe {
     margin-left: 12px;
   }
 }
-
 /*.footer {
   padding-top: 60px;
   padding-bottom: 60px;
