--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -2,6 +2,10 @@
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+  text-align: center;
+}
+.footer-address-container {
+  margin-bottom: 60px;
 }
 .logo-footer {
   font-family: var(--secondary-font);
@@ -14,17 +18,19 @@
   display: block;
   margin-bottom: 20px;
 }
+.footer-social-link {
+  margin-bottom: 60px;
+}
 .footer-address {
   font-family: var(--main-font);
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 1.714;
-  text-align: center;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
-  margin-bottom: 8px;
   display: block;
+  margin-bottom: 8px;
 }
 .footer-contact-mail,
 .footer-contact-tel {
@@ -37,95 +43,147 @@
   color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
 }
-
-.footer-contact-address:not(:last-child) {
+.footer-contact-mail {
+  display: block;
   margin-bottom: 8px;
 }
 .footer-slogan {
   font-family: Roboto;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 14px;
-  line-height: 1.143;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-}
-.footer-form {
-  margin-top: 20px;
   margin-bottom: 20px;
 }
-.footer-form-input {
-  width: 100%;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  background-color: #2f303a;
-  color: rgba(255, 255, 255, 0.6);
-  padding: 15px 16px;
-  max-width: 450px;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.footer-social-list {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
 
-.footer-social-list-item:not(:last-child) {
-  margin-right: 10px;
+.footer-social-link{
+   background-color: rgba(255, 255, 255, 0.1);
+  color: #FFFFFF;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus{
+    background-color: #2196F3;
 }
+.footer-form-input{
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding:15px 16px;
+    background-color: #2F303A;
+    color: #FFFFFF;
 
-.footer-social-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-social-link,
-.footer-social-icon {
-  fill: #ffffff;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
+    width: 450px;
+    height: 50px;
+    margin-bottom: 20px;
+  }
 .button-subscribe {
-  display: flex;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+    min-width: 200px;
+    height: 50px;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.87;
+    align-items: center; 
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-family: var(--main-font);
+    padding: 10px 29px;
+    display: inline-flex;
+    margin-left: -5px;
 }
-.button-subscribe {
-  font-family: var(--main-font);
-  min-width: 200px;
-  height: 50px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.875;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  background-color: #2196f3;
-  cursor: pointer;
-  padding: 10px 29px;
-  display: inline-flex;
-  margin-left: -5px;
-  border: transparent;
-  transition: filter 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+@media screen and (min-width: 768px) {
+  .footer > .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .footer-adress-container {
+    margin-right: 174px;
+    margin-left: 76px;
+    margin-bottom: 60px;
+  }
 }
-.subscribe-text {
-  margin-right: 10px;
+@media screen and (min-width: 768px) {
+  .footer-adress-container {
+    margin-right: 174px;
+    margin-left: 76px;
+    margin-bottom: 60px;
+  }
 }
+@media screen and (min-width: 1200px) {
+  .footer > .container {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .footer {
+    text-align: left;
+  }
+
+  .footer-adress-container {
+    margin-right: 84px;
+    margin-left: 0;
+    margin-bottom: 0;
+  }
+
+  .footer-social-link {
+    margin-right: 93px;
+  }
+
+  .address,
+  .footer-contact-email {
+    margin-bottom: 9px;
+  }
+
+  .footer-social-link {
+    margin-bottom: 0;
+  }
+
+  .logo-footer {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+@media screen and (min-width: 768px){
+
+    .footer-form-input{
+      display: block;
+    }
+
+    .footer-group{
+      margin: auto;
+    }
+
+  }
+    @media screen and (min-width: 1200px){
+    .footer-form-input{
+      display: inline;
+    }
+
+    .footer-form-input{
+      width: 358px;
+      margin-right: 12px;
+    }
+
+    .footer-slogan{
+      text-align: left;
+    }
+
+    .footer-group{
+      margin: 0;
+    }
+  }
+
+/*
 @media screen and (max-width: 1199px) {
   .footer {
     text-align: center;
