--- a/css/main.css
+++ b/css/main.css
@@ -60,11 +60,11 @@ img {
 .container {
   width: 100%;
   padding: 0 15px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 480px) {
   .container {
-    margin: 0 auto;
     max-width: 480px;
   }
 }
@@ -129,36 +129,237 @@ img {
 }
 
 .header {
+  padding-top: 16px;
+  padding-bottom: 16px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #ececec;
-}
-
-.header .container {
-  display: flex;
-  align-items: center;
-}
-
-.header .logo {
-  margin-right: 92px;
+  position: relative;
 }
 
 .logo {
   font-family: var(--secondary-font);
   font-weight: bold;
-  font-size: 26px;
-  line-height: 1.192;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #000000;
+  text-decoration: none;
 }
+
+.navigation-menu-link {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: var(--accent-color);
+  text-decoration: none;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-menu-link:hover, .navigation-menu-link:focus {
+  color: #2196f3;
+}
+
+.menu-container {
+  z-index: 50;
+}
+
+.contact-email:hover,
+.contact-email:focus,
+.contact-phone:hover,
+.contact-phone:focus {
+  color: #2196f3;
+}
+
+.contact-phone,
+.contact-email {
+  font-style: normal;
+  font-family: var(--main-font);
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color);
+  text-decoration: none;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.is-current::after {
+  display: inline-block;
+  content: "";
+  background: #2196f3;
+  border-radius: 2px;
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  bottom: -8px;
+  left: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .header-button {
+    display: inline-flex;
+    background-color: transparent;
+    border: none;
+  }
+  .header-button .icon-close {
+    display: none;
+  }
+  .header-button.is-open .icon-close {
+    display: block;
+  }
+  .header-button.is-open .icon-menu {
+    display: none;
+  }
+  .header-button:hover .icon-menu,
+  .header-button:focus .icon-menu,
+  .header-button:hover .icon-close,
+  .header-button:focus .icon-close {
+    fill: #2196f3;
+  }
+  .menu-container {
+    display: none;
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    left: 0;
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: #fff;
+  }
+  .menu-container.is-open {
+    display: block;
+  }
+  .contact-email {
+    margin-bottom: 16px;
+  }
+  .navigation-menu-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+  .navigation-menu {
+    margin-bottom: 60px;
+  }
+  .navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-button {
+    display: none;
+  }
+  .header {
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+  .navigation-menu-link {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+  }
+  .contact-phone,
+  .contact-email {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  .contact-email {
+    margin-bottom: 10px;
+  }
+  .navigation,
+  .menu-container {
+    display: flex;
+  }
+  .navigation-menu {
+    display: flex;
+    margin-right: 80px;
+  }
+  .logo {
+    margin-right: 88px;
+  }
+  .navigation-menu-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .contact-icon {
+    margin-right: 8px;
+  }
+  .navigation,
+  .navigation-menu {
+    align-items: center;
+  }
+  .is-current::after {
+    bottom: -34px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+  .header .contact-email {
+    margin-right: 30px;
+    margin-bottom: 0;
+  }
+  .navigation-menu-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .contact-phone,
+  .contact-email {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+  .contact-icon {
+    margin-right: 10px;
+  }
+  .contact {
+    display: flex;
+  }
+  .navigation-menu {
+    margin-right: 304px;
+  }
+  .contact-phone,
+  .contact-email {
+    display: flex;
+    align-items: center;
+  }
+}
+
+/*.header {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ececec;
+  & .container {
+    display: flex;
+    align-items: center;
+  }
+}
+.header .logo {
+  margin-right: 92px;
+}
+
 
 .navigation {
   display: flex;
   align-items: center;
-}
-
-.navigation-menu {
-  display: flex;
+  &-menu {
+    display: flex;
+  }
 }
 
 .navigation-menu-item:not(:last-child) {
@@ -175,7 +376,6 @@ img {
   letter-spacing: 0.02em;
   color: var(--accent-color);
 }
-
 .navigation-menu-link {
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -198,39 +398,30 @@ img {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px;
+  &:hover,
+  &:focus {
+    color: #2196f3;
+  }
 }
-
-.navigation-menu-link:hover, .navigation-menu-link:focus,
-.header-address-contact:hover,
-.header-address-contact:focus {
-  color: #2196f3;
-}
-
 .navigation-menu-link.current {
   color: #2196f3;
 }
-
 .header .address {
   display: flex;
 }
-
 .header-address-contact {
   display: flex;
   align-items: center;
   font-style: normal;
   color: #757575;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:not(:last-child) {
+    margin-right: 28px;
+  }
 }
 
-.header-address-contact:not(:last-child) {
-  margin-right: 28px;
-}
-
-.header-address-icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
+*/
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
@@ -275,7 +466,7 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/hero_desk-1x.jpg");
     background-size: 1600px 600px;
   }
-  .title {
+  .title-hero {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
@@ -950,6 +1141,12 @@ img {
   .form-subscribe {
     display: flex;
     width: 358px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .button-subscribe {
+    margin-left: 12px;
   }
 }
 
