--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -20,6 +20,7 @@
   text-transform: uppercase;
   color: #ffffff;
 }
+
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
   screen and (min-resolution: 192dpi) and (min-width: 320px),
   screen and (min-resolution: 2dppx) and (min-width: 320px) {
@@ -62,7 +63,7 @@
     background-size: 1600px 600px;
   }
 
-  .title {
+  .title-hero {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
